# deepNeuronalFilter

./: CMakeLists.txt  CMakeLists_forEEG.txt  README.md  ecg_filter_demo.cpp  ecg_filter_demo_old.cpp  eeg_filter_demo.cpp  parameters.h  run_all_stat.sh
DNF/lib/: Neuron.cpp
EthicsApplication/: 2021_08_24_approve_300210011_collated_reviews.docx  2021_08_24_approve_300210011_letter___cv3.docx  Application_Form.docx  Bioethics - Information Sheet.docx  Participant-Consent-Form.docx
RecordingData/: Recording1.tsv  Recording12.tsv  Recording2.tsv  Recording3.tsv  Recording4.tsv  Recording5.tsv  Recording6.tsv  Recording7.tsv  Recording8.tsv  Recording9.tsv
SubjectData/: Subject1.tsv  Subject10.tsv  Subject11.tsv  Subject4.tsv  Subject6.tsv
cppData/recording1/: cppParams_recording1.tsv  fnn_recording1.tsv  grayLayer10__subject1.csv  grayLayer11__subject1.csv  grayLayer1__subject1.csv  grayLayer2__subject1.csv  grayLayer3__subject1.csv  grayLayer4__subject1.csv  grayLayer5__subject1.csv  grayLayer6__subject1.csv  grayLayer7__subject1.csv  grayLayer8__subject1.csv  grayLayer9__subject1.csv  lWeights_recording1.tsv  laplace_recording1.tsv  lmsCorrelation_recording1.tsv  lmsOutput_recording1.tsv  noise_recording1.tsv  remover_recording1.tsv  signal_recording1.tsv
cppData/recording10/: fnn_recording10.tsv  grayLayer10__subject10.csv  grayLayer11__subject10.csv  grayLayer1__subject10.csv  (+15 more)
pyFiles/: formatECG.py  formatECG3.py  generateFirFilters.py  plotBoxplots.py  plotECG.py  plotECG_2.py  plotECG_3.py  plotECG_4.py  plotECG_remover:learning.py  plotResults.py
(+420 files in other folders)
