cmake_minimum_required(VERSION 3.8.1)
project(ecg_filter)
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(DNF)
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED)
find_package(fir)
add_executable(ecg_filter ecg_filter_demo.cpp parameters.h)
target_link_libraries(ecg_filter CLDL fir ${OpenCV_LIBS})
include_directories(${Boost_INCLUDE_DIRS})